--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: Pop Description
 theme: readthedocs
-extra_css: [extra.css]
+extra_css: 
+    - extra.css
 nav:
     - Home: index.md
     - Pop : pop.md
