--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,12 @@
 site_name: Pop Description
 theme: readthedocs
+markdown_extensions:
+    - toc:
+        baselevel: 2
+        
 extra_css: 
     - extra.css
+    
 nav:
     - Home: index.md
     - Pop : pop.md
