--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,10 @@ theme: readthedocs
 markdown_extensions:
     - toc:
         baselevel: 2
+
+theme:
+    name: hanback_pop
+    custom_dir: theme/
         
 extra_css: 
     - extra.css
