--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,11 @@
 site_name: Pop Description
-theme: readthedocs
 
 markdown_extensions:
     - toc:
         baselevel: 2
 
 theme:
-    name: hanback_pop
+    name: readthedocs
     custom_dir: theme/
         
 extra_css: 
