--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,12 @@
 site_name: Pop Description
 
+markdown_extensions:
+    - toc:
+        baselevel: 2
+
 theme:
     name: readthedocs
-    custom_dir: 'theme/'
+    custom_dir: theme/
         
 extra_css: 
     - extra.css
