--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ markdown_extensions:
 
 theme:
     name: readthedocs
-    custom_dir: theme/
+    custom_dir: custom_theme/
         
 extra_css: 
     - extra.css
