--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,8 @@ markdown_extensions:
         baselevel: 2
 
 theme:
-    name: mkdocs
-    custom_dir: mkdocs/
+    name: readthedocs
+    custom_dir: custom_theme/
         
 extra_css: 
     - extra.css
