--- a/custom_theme/mkdocs_theme.yml
+++ b/custom_theme/mkdocs_theme.yml
@@ -1,7 +1,5 @@
 # Config options for 'readthedocs' theme
 
 static_templates:
+    # - search.html  <= this gets added by the extension. It should be excluded without the extension
     - 404.html
-
-include_search_page: true
-search_index_only: false
